# limestone

./: .gitignore  Makefile.in  README  configure.ac  install-config  plog.pl  pretty_print_trace.rb
adduser/: Makefile.in  adduser.c  configure.ac
limestone/: Makefile.in.static  NOTICE  TODO  acl.c  acl.h  acl_liveprops.c  adduser.c  bind.c  bind.h  binds_liveprops.c  bridge.c  bridge.h  check_garbage_collection.rb  config7.m4.in  configure.in  create.sql  create_postgres_full.sql  dav_repos.h  dbms.c  dbms.h  dbms_acl.c  dbms_acl.h  dbms_api.h  dbms_bind.c  dbms_bind.h  dbms_dbd.c  dbms_dbd.h  dbms_deltav.c  dbms_deltav.h  dbms_locks.c  dbms_locks.h  dbms_principal.c  dbms_principal.h  dbms_quota.c  dbms_quota.h  dbms_redirect.c  dbms_redirect.h  dbms_transaction.c  dbms_transaction.h  deltav_bridge.c  (+37 more)
limestone/database/: add_auth_root_and_cas_cookie_indices_to_auth_user_cookies.xml  add_auth_user_cookies.xml  add_bar_state.xml  add_bind_collection.xml  add_bitmarks_collection.rb  add_bitmarks_collection.xml  add_bits_pw_reset.xml  add_cas_cookie_to_auth_user_cookies.xml  add_created_at_to_auth_user_cookies.xml  add_database_indices.xml  add_email_regex_constraint.xml  add_language_plpgsql.xml  add_lb_email_property.xml  add_lb_lastmodified_property.xml  add_lime_profile_tokens_table.xml  add_lime_profiles_table.xml  add_logdata_received_time_and_request_uri_indices.xml  add_logdata_received_time_index.xml  add_logging_tables.xml  add_media_sha1_index.xml  add_pre_unique_email_to_users.xml  add_private_properties.xml  add_properties_value_index.xml  add_property_values_quota_rules.xml  add_property_values_to_quota.rb  add_pwhash_digest_username_type.xml  add_resource_copies.xml  add_resource_edits.xml  add_resource_views.xml  add_resources_coolness.xml  add_resources_coolness_index.xml  add_resources_views_edits_copies_indices.xml  add_tags_collection.rb  add_tags_collection.xml  add_update_coolness.xml  add_user_domains.xml  add_was_incremented_to_users.xml  change_acl_inheritance_to_materialized_path.xml  consolidate_resource_types.rb  consolidate_resource_types.xml  (+35 more)
limestone/doc/: Doxyfile  generate-schemaSpy
limestone/doc/schemaSpy/: anomalies.html  columns.byAuto.html  columns.byChildren.html  columns.byColumn.html  columns.byDefault.html  columns.byNulls.html  columns.byParents.html  columns.bySize.html  columns.byTable.html  columns.byType.html  constraints.html  deletionOrder.txt  index.html  insertionOrder.txt  limestone.tolsen.xml  relationships.html  schemaSpy.js  utilities.html
limestone/doc/schemaSpy/graphs/: aces.1degree.dot  aces.2degrees.dot  acl_inheritance.1degree.dot  acl_inheritance.2degrees.dot  acl_privileges.1degree.dot  acl_privileges.2degrees.dot  binds.1degree.dot  binds.2degrees.dot  binds_locks.1degree.dot  binds_locks.2degrees.dot  cleanup.1degree.dot  cleanup.2degrees.dot  collections.1degree.dot  collections.2degrees.dot  dav_aces_privileges.1degree.dot  dav_aces_privileges.2degrees.dot  dav_acl_inheritance.1degree.dot  dav_acl_inheritance.2degrees.dot  group_members.1degree.dot  group_members.2degrees.dot  locks.1degree.dot  locks.2degrees.dot  locks_resources.1degree.dot  locks_resources.2degrees.dot  media.1degree.dot  media.2degrees.dot  namespaces.1degree.dot  namespaces.2degrees.dot  principals.1degree.dot  principals.2degrees.dot  properties.1degree.dot  properties.2degrees.dot  quota.1degree.dot  quota.2degrees.dot  redirectrefs.1degree.dot  redirectrefs.2degrees.dot  resource_types.1degree.dot  resource_types.2degrees.dot  resources.1degree.dot  resources.2degrees.dot  (+12 more)
limestone/doc/schemaSpy/graphs/summary/: auth_user_cookies.1degree.dot  autoversion_types.1degree.dot  bits_pw_reset.1degree.dot  databasechangelog.1degree.dot  databasechangeloglock.1degree.dot  relationships.real.compact.dot  relationships.real.large.dot
limestone/doc/schemaSpy/tables/: aces.html  acl_inheritance.html  acl_privileges.html  auth_user_cookies.html  autoversion_types.html  binds.html  binds_locks.html  bits_pw_reset.html  cleanup.html  collections.html  databasechangelog.html  databasechangeloglock.html  dav_aces_privileges.html  dav_acl_inheritance.html  group_members.html  locks.html  locks_resources.html  media.html  namespaces.html  principals.html  properties.html  quota.html  redirectrefs.html  resource_types.html  resources.html  transitive_group_members.html  user_domains.html  users.html  vcrs.html  versions.html  vhrs.html
scripts/: extract-http-request-related-sql
tests/: sample_plog  test_plog_ipfilter.rb
