# ====================================================================
# Copyright 2007 Lime Spot LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# ====================================================================

dnl Process this file with autoconf to produce a configure script.

define([LIME_VERSION],esyscmd([../version -n]))dnl
AC_INIT(LimeStone, LIME_VERSION)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS(socket)


AC_DEFUN([CHECK_DEBUG],[
AC_ARG_WITH(debug,
        [  --with-debug        Set DEBUG],,
        [DEBUG="no"])

if test "$DEBUG" = "no"; then
	DEBUG=
else
        DEBUG=-DDEBUG
fi
])


AC_DEFUN([CHECK_STATIC],[
AC_ARG_WITH(static,
        [  --with-static        Set Static ],,
        [STATIC="no"])

if test "$STATIC" = "no"; then
   echo "Use Makefile.in.so"
   cp -f Makefile.in.so Makefile.in

  ## The goal is to find apxs
  AC_CHECKING(whether apxs is available)
  AC_SUBST(APXS)
  AC_SUBST(DSO)
  AC_SUBST(ALL)
  
  # check for --with-apxs
  AC_MSG_CHECKING(for --with-apxs)
  AC_ARG_WITH(apxs, [--with-apxs=PATH 	Path to apxs],
  [
    if test -x "$withval"
    then
      AC_MSG_RESULT([$withval executable, good])
      APXS=$withval
    else
      echo
      AC_MSG_ERROR([$withval not found or not executable])
    fi
  ],
  AC_MSG_RESULT(no))
  
  # if no apxs found yet, check /usr/local/apache/sbin
  # since it's the default Apache location
  if test -z "$APXS"; then
  	AC_MSG_CHECKING(for apxs in /usr/local/apache2/bin)
  	if test -x /usr/local/apache2/bin/apxs; then
  		APXS=/usr/local/apache2/bin/apxs
  		AC_MSG_RESULT([found $APXS, we'll use this. Use --with-apxs to specify another.])
  	else
  		AC_MSG_RESULT(no)
  	fi
  fi
  
  # second last resort
  if test -z "$APXS"; then
  	AC_MSG_CHECKING(for apxs in your PATH)
  	AC_PATH_PROG(APXS, apxs)
  	if test -n "$APXS"; then
  		AC_MSG_RESULT([found $APXS, we'll use this. Use --with-apxs to specify another.])
  	fi
  fi  
  
  # last resort
  # some linux distributions use apxs2 for apache2 installations,
  # so check for apxs2 before we give up.
  if test -z "$APXS"; then
  	AC_MSG_CHECKING(for apxs2 in your PATH)
  	AC_PATH_PROG(APXS, apxs2)
  	if test -n "$APXS"; then
  		AC_MSG_RESULT([found $APXS, we'll use this. Use --with-apxs to specify another.])
  	fi
  fi  
  
  if test -z "$APXS"; then
            AC_MSG_ERROR(apxs not found! Use --with-apxs to specify its location.)
  fi


else
   echo "Use Makefile.in.static"	
   cp -f Makefile.in.static Makefile.in	
        
fi
])

CHECK_STATIC
CHECK_DEBUG

NEON_LIBRARY

dnl check for libmagic support
AC_MSG_CHECKING([for libmagic support])
AC_CHECK_LIB(magic, magic_open)
AC_CHECK_HEADERS(magic.h, MAGIC="-DUSE_LIBMAGIC -lmagic", AC_MSG_RESULT(no))

# We are not pushing PACKAGE_VERSION to a config.h because it's already
# defined in an apache config file.  We'll let our Makefile rename it
# to a different macro
AC_SUBST(PACKAGE_VERSION)
AC_SUBST(DEBUG)
AC_SUBST(MAGIC)
AC_OUTPUT(Makefile config7.m4)
